# Nerdlock

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  wsgi.py
.github/: dependabot.yml
app/: __init__.py  config.py  door_control.py  extensions.py  models.py  nuki_control.py  nuki_updater.py  space_api.py
app/admin/: __init__.py  routes.py  services.py
app/auth/: routes.py  services.py
app/doors/: __init__.py  routes.py  services.py
app/main/: routes.py
app/profile/: __init__.py  routes.py  services.py
app/static/css/: nerdlock.css
app/static/js/: base.js  doors.js
app/templates/: admin.html  base.html  webauthn_manage.html
app/templates/doors/: index.html  logs.html
app/templates/profile/: index.html
app/templates/security/: change_password.html  login_user.html
deployment/: install_bluetooth_reset.sh  nerdlock.sudoers
migrations/versions/: 97275903c3de_add_initial_admin_user.py  a22ad05257ce_initial_migration.py  b47f232393ad_remove_user_mail_from_log.py
scripts/: pair_nuki.py  reset_bluetooth.sh
tests/: conftest.py  test_admin.py  test_auth.py  test_door_control.py  test_doors.py  test_flask_login_client.py  test_main.py  test_profile.py  test_services.py
